--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <link rel = 'stylesheet' href='style.css'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Image Filter</title>
 </head>
 <body>
-  <h2>Applying filter toImage </h2>
+  <h2>Applying filter to Image </h2>
   
   <img id ='image' src = 'https://images.ctfassets.net/hrltx12pl8hq/28ECAQiPJZ78hxatLTa7Ts/2f695d869736ae3b0de3e56ceaca3958/free-nature-images.jpg?fit=fill&w=1200&h=630'</img>
   <div class ='button'>
